stylesheet paths are working

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
-    {{!-- <link rel="stylesheet" href="/assets/stylesheets/style.css" type="text/css" /> --}}
+	<link rel="stylesheet" href="/css/style.css" type="text/css" />
     <title>ChronoLogic</title>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/public/js/index.js"></script>
@@ -14,7 +14,7 @@
     <script src="/public/js/signup.js"></script>
 </head>
 
-<body class = background>
+<body class="background">
     {{{body}}}
 </body>
 
