--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -1,8 +1,39 @@
-<h1>CHRONOLOGICAL</h1>
+<div class="jumbotron text-center header-wrap" align="center">
+    <h1><strong>ChronoLogical</strong></h1>
 
-<p>Compare Public and Personal Timelines</p>
+    <p>Compare Public and Personal Timelines</p>
+</div> {{!-- end jumbotron --}}
 
+<div class="container">
 
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-4">
+            <div id="publicTimelines">
+                <h1>Public Timelines</h1>
+                <ul>
+                    <li>History of Wars</li>
+                    <li>Scientific Breakthroughs</li>
+                    <li>Barbie</li>
+                </ul>
+            </div> {{!-- end publicTimelines --}}
+        </div>
+        <div class="col-md-2"></div>
+        <div class="col-md-4">
+            <div id="userTimelines">
+                <h1>User Timelines</h1>
+                <ul>
+                    <li>Timeline 1</li>
+                    <li>Timeline 2</li>
+                </ul>
+            </div> {{!-- end userTimelines --}}
+        </div>
+        <div class="col-md-1"></div>
 
+    </div> {{!-- end row --}}
+    
+    <div class="row">
 
+    </div> {{!-- end row --}}
 
+</div> {{!-- end container --}}
