--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,12 +6,10 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="/css/style.css" type="text/css" />
     <title>ChronoLogic</title>
     <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="/public/js/index.js"></script>
-    <script src="/public/js/login.js"></script>
-    <script src="/public/js/signup.js"></script>
+    <script src="/js/index.js"></script>
 </head>
 
 <body class="background">
