--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,72 @@
-#publicTimelines {
-    border: 2px solid blue;
+/*************/
+/* JUMBOTRON */
+/*************/
+
+.jumbotron h1 {
+    font-size: 7em;
 }
 
-.container {
-    color: black;
+/***************************/
+/* PUBLIC & USER TIMELINES */
+/***************************/
+
+/* PUBLIC TIMELINES */
+
+#publicTimelines {
+    border: 1px solid red;
+    text-align: center;
 }
+
+#publicTimelines h1 {
+    text-decoration: underline;
+    text-align: center;
+}
+
+p.publicTimelineOption {
+    border: 1px solid black;
+    text-align: center;
+    margin-bottom: 1%;
+}
+
+/* USER TIMELINES */
+
+#userTimelines {
+    border: 1px solid red;
+    text-align: center;
+}
+
+#userTimelines h1 {
+    text-decoration: underline;
+    text-align: center;
+}
+
+p.userTimelineOption {
+    border: 1px solid black;
+    text-align: center;
+    margin-bottom: 1%;
+}
+
+
+/********************/
+/* TIMELINE OPTIONS */
+/********************/
+
+.selectedTimelines{
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+#option1, #option2 {
+    border: 1px solid grey;
+    margin-top: 4%;
+}
+
+/*********************/
+/* RENDERED TIMELINE */
+/*********************/
+
+#timeline {
+    border: 2px solid red;
+}
+
+
