--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -27,6 +27,7 @@
                 <h1>User Timelines</h1>
                 <p class="userTimelineOption" data-name="Grandfathers Moments">Grandfathers Moments</p>
                 <p class="userTimelineOption" data-name="Another Timeline">Another Timeline</p>
+                <p class="userTimelineOption" data-name="Barbie">Barbie</p>
 
             </div> {{!-- end userTimelines --}}
         </div>
