--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,17 +12,18 @@
         {{!-- <div> --}}
 
             <!-- /////MOVE ALL THIS TO NAVBAR DROP DOWN -->
-            {{#if isloggedin}}
+
+            {{!-- {{#if isloggedin}}
             <button type="submit" id="search-item" class="btn">My Timelines</button>
             <a href="/logout"> <button type="btn" class="btn">Logout</button></a>
             {{else}}
             <button type="submit" id="sign-in-modal" class="btn">Login!</button>
             <button type="submit" id="sign-up" class="btn">Sign Up!</button>
-            {{/if}}
+            {{/if}} --}}
 
-        </div>
+        {{!-- </div>
     </div>
-</div>
+</div> --}}
 
 
 
@@ -33,16 +34,15 @@
             <form class="login">
                 <div class="form-group">
                     <label for="exampleInputUsername1">Username</label>
-                    <input type="usernamelogin" class="form-control" id="usernamelogin-input" placeholder="Username">
+                    <input type="username" class="form-control" id="usernamelogin-input" placeholder="Username">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
-                    <input type="passwordlogin" class="form-control" id="passwordlogin-input" placeholder="Password">
+                    <input type="password" class="form-control" id="passwordlogin-input" placeholder="Password">
                 </div>
                 <button type="submit" class="btn btn-default">Login</button>
             </form>
             <br />
-            <p>Or sign up <a href="/">here</a></p>
         </div>
     </div>
 </div>
@@ -71,7 +71,6 @@
                 <button type="submit" class="btn btn-default">Sign Up</button>
             </form>
             <br />
-            <p>Or log in <a href="/login">here</a></p>
         </div>
     </div>
 </div>
