--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,7 +29,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-6">
             <h2>Login Form</h2>
             <form class="login">
                 <div class="form-group">
@@ -44,12 +44,12 @@
             </form>
             <br />
         </div>
-    </div>
-</div>
+    {{!-- </div> --}}
+{{!-- </div> --}}
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+{{!-- <div class="container"> --}}
+    {{!-- <div class="row"> --}}
+        <div class="col-md-6">
             <h2>Sign Up Form</h2>
             <form class="signup">
                 <div class="form-group">
