--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -1,3 +1,8 @@
+<div class="navbar">
+    <h2>Welcome</h2>
+    <p>Login/Sign Up</p>
+</div>
+
 <div class="jumbotron text-center header-wrap" align="center">
     <h1><strong>《 ChronoLogical 》</strong></h1>
 
