--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -1,6 +1,6 @@
 <div class="navbar">
     <h2>Welcome</h2>
-    <p>Login/Sign Up</p>
+    <p><a href="/index">Login/Sign Up</a></p>
 </div>
 
 <div class="jumbotron text-center header-wrap" align="center">
