--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -12,41 +12,28 @@
 
 <div class="container">
     <div class="row row1">
-        <div class="col-md-5" id="createTimelineDiv">
+        <div class="col-md-3" id="createTimelineDiv">
             <div>
-                <h4>Add new Event</h4>
+                <h4>Add new Timeline</h4>
                 <hr id="createHR">
                 <form>
                     <div class="form-group">
-                        <label for="eventTitle">Event Title</label>
-                        <input class="form-control" id="eventTitle" aria-describedby="eventTitle">
+                        <label for="timelineTitle">Timeline Title</label>
+                        <input class="form-control" id="timelineTitle" aria-describedby="eventTitle">
                     </div>
                     <div class="form-group">
-                        <label for="descriptionArea">Event Description</label>
-                        <textarea class="form-control" id="descriptionArea" rows="2"></textarea>
+                        <label for="timelineCategory">Timeline Category</label>
+                        <textarea class="form-control" id="timelineCategory" rows="2"></textarea>
                     </div>
                 
-
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col">
-                                <label for="startDate">Start Date</label>
-                                <input class="form-control" id="startDate" placeholder="DD-MM-YYYY">
-                            </div>
-                            <div class="col">
-                                <label for="endDate">End Date (optional) </label>
-                                <input class="form-control" id="endDate" placeholder="DD-MM-YYYY">
-                            </div>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Add Event</button>
+                    <button type="submit" class="btn btn-primary">Create Timeline</button>
 
 
                 </form>
 
             </div>
         </div>{{!-- end col-md --}}
-        <div class="col-md-5" id="editTimelineDiv">
+        <div class="col-md-6" id="editTimelineDiv">
             <div>
                 <h4>Edit an Event</h4>
                 <hr id="createHR">
@@ -81,13 +68,13 @@
             </div>
 
         </div>
-        <div class="col-md-2" id="userCreatedTimelines">
+        <div class="col-md-3" id="userCreatedTimelines">
             <div>
 
                 <h4>Your Timelines</h4>
                 <hr id="divider">
-                <p>Barbie</p>
-                <p>Family History</p>
+                <p>Barbie<button>Delete</button></p> 
+                <p>Family History<button>Delete</button></p>
 
             </div>
         </div> {{!-- end col-md --}}
