added buttons to timelines

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -73,8 +73,8 @@
 
                 <h4>Your Timelines</h4>
                 <hr id="divider">
-                <p>Barbie<button>Delete</button></p> 
-                <p>Family History<button>Delete</button></p>
+                <p>Barbie<button>View</button><button>Edit</button><button>Delete</button></p> 
+                <p>Family History<button>View</button><button>Edit</button><button>Delete</button></p>
 
             </div>
         </div> {{!-- end col-md --}}
