--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -16,16 +16,16 @@
             <div>
                 <h4>Add new Timeline</h4>
                 <hr id="createHR">
-                <form>
+                <form class="timelineForm">
                     <div class="form-group">
                         <label for="timelineTitle">Timeline Title</label>
-                        <input class="form-control" id="timelineTitle" aria-describedby="eventTitle">
+                        <input class="form-control" id="timelineTitle" aria-describedby="eventTitle" name="title">
                     </div>
                     <div class="form-group">
                         <label for="timelineCategory">Timeline Category</label>
-                        <textarea class="form-control" id="timelineCategory" rows="2"></textarea>
+                        <textarea class="form-control" id="timelineCategory" rows="2" name="cat_name"></textarea>
                     </div>
-                
+
                     <button type="submit" class="btn btn-primary">Create Timeline</button>
 
 
@@ -37,30 +37,34 @@
             <div>
                 <h4>Edit an Event</h4>
                 <hr id="createHR">
-                <form>
+                <form id="eventForm">
                     <div class="form-group">
-                        <label for="eventTitle">Event Title</label>
-                        <input class="form-control" id="eventTitle" aria-describedby="eventTitle">
-                    </div>
-                    <div class="form-group">
-                        <label for="descriptionArea">Event Description</label>
-                        <textarea class="form-control" id="descriptionArea" rows="2"></textarea>
-                    </div>
-                
+                        <label for="category">Select Timeline:</label>
+                        <select class="custom-select" id="timeline">
+                        </select>
+                        <div class="form-group">
+                            <label for="eventTitle">Event Title</label>
+                            <input class="form-control" id="eventTitle" aria-describedby="eventTitle">
+                        </div>
+                        <div class="form-group">
+                            <label for="descriptionArea">Event Description</label>
+                            <textarea class="form-control" id="descriptionArea" rows="2"></textarea>
+                        </div>
 
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col">
-                                <label for="startDate">Start Date</label>
-                                <input class="form-control" id="startDate" placeholder="DD-MM-YYYY">
-                            </div>
-                            <div class="col">
-                                <label for="endDate">End Date (optional) </label>
-                                <input class="form-control" id="endDate" placeholder="DD-MM-YYYY">
+
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col">
+                                    <label for="startDate">Start Date</label>
+                                    <input class="form-control" id="startDate" placeholder="DD-MM-YYYY">
+                                </div>
+                                <div class="col">
+                                    <label for="endDate">End Date (optional) </label>
+                                    <input class="form-control" id="endDate" placeholder="DD-MM-YYYY">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Save</button>
+                        <button type="submit" class="btn btn-primary">Save</button>
 
 
                 </form>
@@ -73,7 +77,7 @@
 
                 <h4>Your Timelines</h4>
                 <hr id="divider">
-                <p>Barbie<button>View</button><button>Edit</button><button>Delete</button></p> 
+                <p>Barbie<button>View</button><button>Edit</button><button>Delete</button></p>
                 <p>Family History<button>View</button><button>Edit</button><button>Delete</button></p>
 
             </div>
