added javascript file to main

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
     <title>ChronoLogic</title>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/js/index.js"></script>
+    <script src="/js/create.js"></script>
 </head>
 
 <body class="background">
