--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -63,3 +63,5 @@
 <div class="col-md-12" id="timeline">
     Timeline will render here
 </div> {{!-- end container/timeline1 --}}
+
+<script src="/js/mainpage.js"></script>
