--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,9 +6,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
+    <link href="/css/timeline.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/css/style.css" type="text/css" />
     <title>ChronoLogic</title>
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="/js/timeline.min.js"></script>
     <script src="/js/index.js"></script>
     <script src="/js/create.js"></script>
 </head>
