editing an event

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -45,7 +45,8 @@
                 <hr id="createHR">
                 <div class="form-group">
                     <label for="category">Select Timeline:</label>
-                    <select class="custom-select" id="timeline">
+                    <select class="timeline-select" id="timeline">
+                        <option id = "timeline-list"></option>
                     </select>
                 </div>
                 <form id="eventForm">
