--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -72,9 +72,9 @@
         <div class="timeline__wrap">
             <div class="timeline__items">
 
-                {{#each data}}
+                {{!-- {{#each data}}
                 {{> timeline-item}}
-                {{/each}}
+                {{/each}} --}}
 
             </div> <!-- end class=timeline__items -->
         </div> <!-- end class=timeline__wrap -->
