--- a/views/partials/public-timelines.handlebars
+++ b/views/partials/public-timelines.handlebars
@@ -1,3 +1,3 @@
-<p class="publicTimelineOption" data-name="{{title}}" data-id="{{id}}">
-  <span class="publicTimelineOption" data-name="{{title}}" data-id="{{id}}"> <strong> {{title}} </strong> </span>
+<p class="publicTimelineOption" data-name="{{title}}" value="{{id}}" data-id="{{id}}">
+  <span class="publicTimelineOption" data-name="{{title}}" value="{{id}}" data-id="{{id}}"> <strong> {{title}} </strong> </span>
 </p>
