fixing broken add event

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -43,7 +43,7 @@
             <div>
                 <h4>Create an Event</h4>
                 <hr id="createHR">
-                <form id="TimelineForm">
+                <form id="eventForm">
                     <div class="form-group">
                         <label for="category">Select Timeline:</label>
                         <select class="timeline-select" id="timeline">
