drop downs work - render almost works

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -99,7 +99,7 @@
                 </form>
 
                 <p>Event Description</p>
-                <div class="event-description"></div>
+                <div class="event-description" id = "event-description"></div>
                 <p>Start Date</p>
                 <div class="start-date"></div>
                 <p>End Date</p>
