--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -97,6 +97,8 @@
                 </div>
                 <button type="submit" id = "eventSubmit" class="btn btn-primary">Submit Event</button>
                 </form>
+                <p>Event Title</p>
+                <div class="event-title" id = "event-title"></div>
 
                 <p>Event Description</p>
                 <div class="event-description" id = "event-description"></div>
