--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,58 +1,34 @@
-
-
-<!-- index modals go here -->
-
-<!-- REVIEW THIS -->
-
-{{!-- <div id="main-container" class="container"> --}}
-    {{!-- <div class="jumbotron text-center header-wrap" align="center"> --}}
-        {{!-- <h1 class="display-4">ChronoLogic</h1> --}}
-        {{!-- <img src="" alt="logo" class="mb-4" style="width:210px;"> --}}
-        {{!-- <p class="lead">Welcome to <strong>ChronoLogic</strong> where you can compare your time.</p> --}}
-        {{!-- <hr class="my-4"> --}}
-        {{!-- <p class="lead">XXXXXXXXXXX</p> --}}
-        {{!-- <div> --}}
-
-            <!-- /////MOVE ALL THIS TO NAVBAR DROP DOWN -->
-
-            {{!-- {{#if isloggedin}}
-            <button type="submit" id="search-item" class="btn">My Timelines</button>
-            <a href="/logout"> <button type="btn" class="btn">Logout</button></a>
-            {{else}}
-            <button type="submit" id="sign-in-modal" class="btn">Login!</button>
-            <button type="submit" id="sign-up" class="btn">Sign Up!</button>
-            {{/if}} --}}
-
-        {{!-- </div>
-    </div>
-</div> --}}
-
-
-
 <div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <h2>Login Form</h2>
-            <form class="login">
-                <div class="form-group">
-                    <label for="exampleInputUsername1">Username</label>
-                    <input type="username" class="form-control" id="usernamelogin-input" placeholder="Username">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="passwordlogin-input" placeholder="Password">
-                </div>
-                <button type="submit" class="btn btn-default">Login</button>
-            </form>
-            <br />
-        </div>
-    {{!-- </div> --}}
-{{!-- </div> --}}
 
-{{!-- <div class="container"> --}}
-    {{!-- <div class="row"> --}}
-        <div class="col-md-6">
-            <h2>Sign Up Form</h2>
+    {{!-- LOGIN CARD --}}
+    <div class="col-6 align-center">
+        <div id="login" class="card visible">
+            <div class="card-header">
+                <h2>Login</h2>
+            </div>
+            <div class="card-body">
+                <form class="login">
+                    <div class="form-group">
+                        <label for="exampleInputUsername1">Username</label>
+                        <input type="username" class="form-control" id="usernamelogin-input" placeholder="Username">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input type="password" class="form-control" id="passwordlogin-input" placeholder="Password">
+                    </div>
+                    <a href="#" type="submit" class="btn btn-default">Login</a>
+                    <a href="#" id="linkSignup" type="link">Sign up</a>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    {{!-- SIGN UP CARD --}}
+    <div id="signup" class="card w-50 invisible">
+        <div class="card-header">
+            <h2>Sign Up</h2>
+        </div>
+        <div class="card-body">
             <form class="signup">
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
@@ -70,9 +46,36 @@
                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                     <span class="sr-only">Error:</span> <span class="msg"></span>
                 </div>
-                <button type="submit" class="btn btn-default">Sign Up</button>
+                <a href="#" id="linkSignupDone" type="submit" class="btn btn-default">Sign Up</a>
             </form>
-            <br />
         </div>
     </div>
+
 </div>
+
+
+
+<script type="text/javascript">
+    $(document).ready(function () {
+
+        if ($("#login").hasClass("visible")) {
+            $("#signup").removeClass("visible")
+            $("#signup").addClass("invisible")
+        };
+
+        $(document).on("click", "#linkSignup", function () {
+            $("#login").removeClass("visible");
+            $("#login").addClass("invisible");
+            $("#signup").removeClass("invisible");
+            $("#signup").addClass("visible");
+        });
+
+        $(document).on("click", "#linkSignupDone", function () {
+            $("#signup").removeClass("visible");
+            $("#signup").addClass("invisible");
+            $("#login").removeClass("invisible");
+            $("#login").addClass("visible");
+        });
+
+    });
+</script>
